Fix : select hides scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -129,4 +129,8 @@
   body {
     @apply bg-background text-foreground;
   }
+  html body[data-scroll-locked] {
+    overflow: visible !important;
+    margin-right: 0 !important;
+  } 
 }
